--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -10,5 +10,5 @@ jobs:
       - run: chmod +x ./cm
       - run: ./cm selenoid start --vnc
       - run: ./cm selenoid-ui start
-      - run: mvn clean test
+      - run: mvn -B clean test
       
