--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -10,6 +10,6 @@ jobs:
       - run: chmod +x ./cm
       - run: ./cm selenoid start --vnc
       - run: ./cm selenoid-ui start
-      - run: cd ..
-      - run: mvn -B clean test
-      
+      - run: mvn -B package --file pom.xml
+      - run: cd target
+      - run: mvn clean test
